--- a/app/src/main/res/layout/toast_layout.xml
+++ b/app/src/main/res/layout/toast_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:paddingTop="3dp"
     android:paddingBottom="3dp"
-    android:background="@drawable/toast"
+    android:background="@drawable/toast_bg"
     android:paddingLeft="10dp"
     android:paddingRight="10dp">
 
