--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:icon="@mipmap/ic_settings_white_24dp"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
