Добавлена трансляция видео, доработан интерфейс, добавлен список настроек.

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,18 +6,22 @@
 
     <SurfaceView
         android:id="@+id/SurfaceView01"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:visibility="gone"></SurfaceView>
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_alignParentBottom="true"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:gravity="center_vertical|center_horizontal">
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -26,7 +30,7 @@
             android:textColor="#888"
             android:text="@string/network_error"
             android:id="@+id/tvStatus"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center" />
 
         <ToggleButton
             android:layout_width="125dp"
