--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="resolutionArray">
-        <item>Number 1</item>
-        <item>Number 2</item>
-        <item>Number 3</item>
-        <item>Number 4</item>
+    <string-array name="orientationArray">
+        <item>Ландшафтная</item>
+        <item>Портретная</item>
+        <item>Перевёрнутая</item>
+        <item>Перевёрнутая портретная</item>
     </string-array>
 
-    <string-array name="resolutionValues">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
+    <string-array name="orientationValues">
+        <item>0</item>
+        <item>90</item>
+        <item>180</item>
+        <item>270</item>
     </string-array>
 </resources>
