--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -28,9 +28,11 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#888"
-            android:text="@string/network_error"
+            android:text="@string/error_network"
             android:id="@+id/tvStatus"
-            android:layout_gravity="center" />
+            android:width="150dp"
+            android:layout_gravity="center"
+            android:gravity="center" />
 
         <ToggleButton
             android:layout_width="125dp"
